# lib_print-in-pygame-s-screen

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
examples/: advanced_example.py  basic_example.py
multiples/: print_in_screen.py
print_in_pygame/: __init__.py  print_in_screen.py
tests/: __init__.py  test_print_in_screen.py
