[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "print-in-pygame-screen"
version = "0.2.0"
description = "A library for displaying text more easily in PyGame"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Loyam1", email = "mayol.picard@gmx.fr"}
]
maintainers = [
    {name = "Loyam1", email = "mayol.picard@gmx.fr"}
]
keywords = ["pygame", "text", "rendering", "screen", "display"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "pygame>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/Loyam1/lib_print-in-pygame-s-screen"
"Bug Tracker" = "https://github.com/Loyam1/lib_print-in-pygame-s-screen/issues"
"Documentation" = "https://github.com/Loyam1/lib_print-in-pygame-s-screen#readme"
"Source" = "https://github.com/Loyam1/lib_print-in-pygame-s-screen"

[tool.setuptools]
packages = ["print_in_pygame"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=print_in_pygame --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["print_in_pygame"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
